--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ main {
    background-color: rgb(36, 118, 194);
 }
 
-.delete {
+.delete-btn {
    width: 60px;
    height: 60px;
    background-color: rgb(27, 154, 156);
@@ -105,12 +105,12 @@ main {
 
 }
 
-.delete:hover {
+.delete-btn:hover {
    background-color: rgb(241, 55, 14);
 
 }
 
-.modify {
+.modify-btn {
    width: 60px;
    height: 60px;
    border: 3px solid rgb(240, 109, 6);
@@ -121,6 +121,6 @@ main {
 
 }
 
-.modify:hover {
+.modify-btn:hover {
    background-color: rgb(26, 128, 179);
 }
